--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vue/eslint-config-prettier",
-  "version": "7.0.0",
+  "name": "@solumon/eslint-config-prettier",
+  "version": "1.0.0",
   "description": "eslint-config-prettier for Vue",
   "main": "index.js",
   "files": [
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vuejs/eslint-config-prettier.git"
+    "url": "https://github.com/solumon/eslint-config-prettier.git"
   },
   "keywords": [
     "vue",
@@ -19,30 +19,21 @@
     "eslint",
     "prettier"
   ],
-  "author": "Evan You",
+  "author": "solumon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vuejs/eslint-config-prettier/issues"
+    "url": "https://github.com/solumon/eslint-config-prettier/issues"
   },
-  "homepage": "https://github.com/vuejs/eslint-config-prettier#readme",
-  "dependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
-  },
+  "homepage": "https://github.com/solumon/eslint-config-prettier",
   "devDependencies": {
-    "eslint": "^8.5.0",
-    "prettier": "^2.5.1"
+    "eslint": "^8.12.0",
+    "prettier": "^2.6.1"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^8.5.0"
   },
   "peerDependencies": {
-    "eslint": ">= 7.28.0",
-    "prettier": ">= 2.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "./index.js"
-    ]
-  },
-  "scripts": {
-    "lint": "eslint index.js --fix"
+    "eslint": ">=7.0.0",
+    "prettier": ">=2.0.0"
   }
 }
